@@ -1,5 +1,6 @@
 plugins {
     id 'scala' // Add the Scala plugin
+    id 'application' // Add the application plugin
 }
 
 group = 'org.example'
@@ -30,3 +31,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--enable-preview", "--release", "19"]
+}
+
+tasks.named('run') {
+    jvmArgs '--enable-preview'
+}
+
